force-app/main/default/objects/Compliance_Rule__mdt/Compliance_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Compliance Rule</label>
    <pluralLabel>Compliance Rules</pluralLabel>
    <description>Executable compliance evaluation rules with SOQL queries, metadata checks, and configuration scans</description>
</CustomObject>