force-app/main/default/objects/Compliance_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Rule category for grouping (e.g., Access Control, Encryption, Audit Trail)</description>
    <label>Category</label>
    <length>120</length>
    <type>Text</type>
</CustomField>