force-app/main/default/objects/Compliance_Rule__mdt/fields/Control_Reference__c.field-meta.xml
<CustomField>
    <fullName>Control_Reference__c</fullName>
    <description>Reference to the compliance control this rule evaluates (e.g., SOC2-CC6.1, HIPAA-164.312)</description>
    <label>Control Reference</label>
    <length>120</length>
    <type>Text</type>
</CustomField>