force-app/main/default/objects/Compliance_Rule__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of what this rule checks</description>
    <label>Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>