force-app/main/default/objects/Compliance_Rule__mdt/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <description>Type of evaluation strategy: SOQL_QUERY, METADATA_CHECK, or CONFIG_SCAN</description>
    <label>Evaluation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>SOQL_QUERY</fullName><default>true</default><label>SOQL Query</label></value>
            <value><fullName>METADATA_CHECK</fullName><default>false</default><label>Metadata Check</label></value>
            <value><fullName>CONFIG_SCAN</fullName><default>false</default><label>Config Scan</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>