force-app/main/default/objects/Compliance_Rule__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this rule is currently active for evaluation</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>