force-app/main/default/objects/Compliance_Rule__mdt/fields/Remediation_Action__c.field-meta.xml
<CustomField>
    <fullName>Remediation_Action__c</fullName>
    <description>Remediation action identifier (references Compliance_Remediation__mdt DeveloperName)</description>
    <label>Remediation Action</label>
    <length>120</length>
    <type>Text</type>
</CustomField>