force-app/main/default/objects/Compliance_Rule__mdt/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Severity level when rule fails</description>
    <label>Severity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>CRITICAL</fullName><default>false</default><label>Critical</label></value>
            <value><fullName>HIGH</fullName><default>true</default><label>High</label></value>
            <value><fullName>MEDIUM</fullName><default>false</default><label>Medium</label></value>
            <value><fullName>LOW</fullName><default>false</default><label>Low</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>