force-app/main/default/objects/Compliance_Rule__mdt/fields/Threshold_Operator__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Operator__c</fullName>
    <description>Comparison operator for threshold evaluation (EQUALS, NOT_EQUALS, GREATER_THAN, LESS_THAN, CONTAINS, NOT_CONTAINS)</description>
    <label>Threshold Operator</label>
    <length>40</length>
    <type>Text</type>
</CustomField>