force-app/main/default/objects/Compliance_Rule__mdt/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <description>Expected threshold value for evaluation comparison</description>
    <label>Threshold Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>