force-app/main/default/objects/Compliance_Rule__mdt/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Weight for compliance score calculation (higher = more impact on overall score)</description>
    <label>Weight</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>